overflow scroll bug

--- a/src/pages/CryptosPage/CryptosPage.scss
+++ b/src/pages/CryptosPage/CryptosPage.scss
@@ -2,7 +2,6 @@
   border-bottom: 1px solid var(--clr-fontAccent);
   padding: 0 1.4em;
   margin: 0 auto;
-  overflow: hidden;
 }
 
 /* PAGINATION */
