--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -61,7 +61,6 @@ body {
   min-height: 1000px;
   width: 100vw;
   margin: 0 auto;
-  overflow: auto;
   overflow-x: hidden;
 }
 
